# FinChecker

./: .flake8  .gitignore  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml  server_test.py
docs/source/: client.rst  common.rst  conf.py  index.rst  server.rst
finchecker/client/: __init__.py  __main__.py  stat.xml
finchecker/common/: __init__.py
finchecker/server/: __init__.py  __main__.py
i18n/po/ru_RU.UTF-8/LC_MESSAGES/: gui.po
tests_files/: correlation_table_model.csv
